# octodns-bluecat

./: .gitignore  LICENSE  README.md  pyproject.toml
config/: octodns.yaml
octodns_bluecat/: __init__.py
script/: test
tests/: test_provider_bluecat.py
tests/fixtures/bluecat/: records_unit_tests.json  session.json  views.json  zones.json
