[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "octodns-bluecat"
version = "0.0.1"
description = "BlueCat Address Manager (BAM) REST API v2 provider for octodns"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["octodns", "bluecat", "dns", "bam"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: Name Service (DNS)",
]

dependencies = [
    "octodns>=1.4.0",
    "requests>=2.31.0",
    "urllib3>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "responses>=0.25",
]

[project.urls]
Homepage = "https://github.com/octodns/octodns-bluecat"
"Bug Tracker" = "https://github.com/octodns/octodns-bluecat/issues"

[tool.setuptools.packages.find]
include = ["octodns_bluecat*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"

[tool.coverage.run]
source = ["octodns_bluecat"]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 80
